release/hello-nto-service.yaml
#
# Copyright 2019 Kevin Kuehl
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
apiVersion: v1
kind: Service
metadata:
  name: hello-nto-service
spec:
  type: ClusterIP
  selector:
    app: hello-nto
  ports:
  - name: http
    port: 80
    targetPort: 8080
